--- a/HQTCSDL/account.html
+++ b/HQTCSDL/account.html
@@ -30,9 +30,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="container">
                 <div class="header-top-left">
                     <ul>
-                        <li><a href="account.html"><span class="glyphicon glyphicon-user">Đăng nhập
-                        </span>
-                        </a></li>
+                        <li><a href="account.html"><span class="glyphicon glyphicon-user">
+                        </span> Đăng nhập
+                        </a>
+                    </li>
                         <li><a href="register.html"><span class="glyphicon glyphicon-reply"> </span>Tạo tài khoản</a></li>
                     </ul>
                 </div>
@@ -59,8 +60,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li><a href="index.php">Trang chủ</a></li>
-                        <li><a href="products.php?category=books">Mua sắm</a></li>
-                        <li><a href="admin.php">Admin Page</a></li>
+                        <li><a href="products.php">Mua sắm</a></li>
                         <li><a href="checkout.php" >Giỏ hàng</a></li>
                     </ul>
                 </div>
@@ -72,15 +72,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		<div class="login-page">
 		    <div class="dreamcrub">
-		   	 	<ul class="breadcrumbs">
-                    <li class="home">
-                       <a href="index.html" title="Go to Home Page">Trang chủ</a>&nbsp;
-                       <span>&gt;</span>
-                    </li>
-                    <li class="women">
-                       Đăng nhập
-                    </li>
-                </ul>
             	<div class="clearfix"></div>
 		   	</div>
 		   	<div class="account_grid">
@@ -126,7 +117,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<ul class="f_nav">
 							<li><a href="account.html">Đăng nhập</a></li>
 							<li><a href="register.html">Tạo tài khoản mới</a></li>
-							<li><a href="checkout.html">Giỏ hàng</a></li>
+							<li><a href="checkout.php">Giỏ hàng</a></li>
 						</ul>
 					</div>
 					<div class="col-md-3 span1_of_4">
