--- a/HQTCSDL/register.html
+++ b/HQTCSDL/register.html
@@ -56,7 +56,6 @@
                     <ul class="nav navbar-nav">
                         <li><a href="index.php">Trang chủ</a></li>
                         <li><a href="products.php?category=books">Mua sắm</a></li>
-                        <li><a href="admin.php">Admin Page</a></li>
                         <li><a href="checkout.php" >Giỏ hàng</a></li>
                     </ul>
                 </div>
@@ -88,6 +87,10 @@
 						<ul>
 							<li class="text-info">Số điện thoại:</li>
 							<li><input type="text" value="" name="phone" required="required"></li>
+						</ul>
+						<ul>
+							<li class="text-info">Địa chi:</li>
+							<li><input type="text" value="" name="diachi" required="required"></li>
 						</ul>
 						<input type="submit" value="ĐĂNG KÝ" name="submit">
 					 	</form>
